--- a/stylesheets/styleresponsive.css
+++ b/stylesheets/styleresponsive.css
@@ -78,7 +78,6 @@
     #works .portfolio-item {
       background-color: transparent;
       width: 100%;
-      height: 400px;
       padding-bottom: 1rem;
       margin-bottom: 1rem;
     }
@@ -109,12 +108,14 @@
     }
     
     #works .portfolio-item .item-content .item-image {
-      background-size: contain;
+      width: 400px;
+      height: 400px;
+      background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       border: none;
       box-shadow: none;
-      filter: drop-shadow(0px 0px 4px rgba(212, 131, 218, 0.718));
+      border: 2px solid #c7c7c7;
     }
 /*   
     #works .item_four {
@@ -269,7 +270,7 @@
     #about-me .myPicture {
       margin-right:2rem;
       height: 300px;
-      width: 270px;
+      width: 300px;
       margin: 1rem 0 2rem 0;
     }
   
@@ -407,6 +408,22 @@
       font-size: 160px;
     }
 
+    #works .portfolio-item {
+      padding-bottom: 0.5rem;
+    }
+
+    #works .portfolio-item .item-content .item-image {
+      width: 300px;
+      height: 300px;
+    }
+
+    .works-description {
+      justify-content: center;
+    }
+
+    .works-description .item-category {
+      display: none;
+    }
    
     #blogs .section-title .h1-manipulated {
         margin-top: -50px;
@@ -420,6 +437,9 @@
 
   @media (max-width:570px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
   
+    body {
+      overflow-x: hidden;
+    }
     .section-title h1,
     .section-title h1 .unbold {
       font-size: 90px;
@@ -500,8 +520,8 @@
         padding-bottom: 1rem;
     }
 
-    #works .portfolio .portfolio-item{   
-        height: 270px;
+    #works .portfolio-item {
+      padding-bottom: 0;
     }
 
     #tech-used {
